force-app/main/default/objects/Recruitment_Call__c/Recruitment_Call__c.object-meta.xml
<CustomObject>
    <description>Custom object to manage the recruitment calling campaign efforts.</description>
    <label>Recruitment Call</label>
    <nameField>
        <displayFormat>CALL{0000000}</displayFormat>
        <label>Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>