force-app/main/default/objects/Recruitment_Call__c/fields/Call_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Comments__c</fullName>
    <description>Open rich text area that allows users to enter notes or comments about their phone call with the prospect or applicant.</description>
    <label>Call Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>