force-app/main/default/objects/Recruitment_Call__c/fields/Call_Origin__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin__c</fullName>
    <description>Picklist field to indicate whether the phone call was originated as an inbound call or as an outbound call.</description>
    <label>Call Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <default>true</default>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>