force-app/main/default/objects/Recruitment_Call__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <description>Picklist field that allows users to select the call result.</description>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Left Message on Voicemail</fullName>
            </value>
            <value>
                <fullName>Left Message with Family Member</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Not Attempted</fullName>
            </value>
            <value>
                <fullName>Notecard Sent</fullName>
            </value>
            <value>
                <fullName>Spoke with Other Family Member</fullName>
            </value>
            <value>
                <fullName>Spoke with Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Spoke with Student</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>