force-app/main/default/objects/Recruitment_Call__c/fields/Call_Success__c.field-meta.xml
<CustomField>
    <fullName>Call_Success__c</fullName>
    <description>Formula field to display whether or not the call result was successful.</description>
    <formula>Case(Call_Result__c,
"Spoke with Student","Yes",
"Spoke with Parent/Guardian", "Yes",
"Spoke with Other Family Member", "Final Attempt",
"Left Message on Voicemail", "Final Attempt",
"Left Message with Family Member", "Final Attempt",
"Disconnected", "Final Attempt",
"No Answer", "Final Attempt",
"Wrong Number", "Final Attempt",
"Not Attempted (Supervisor Only)", "Final Attempt",
""
)</formula>
    <label>Call Success</label>
    <type>Text</type>
</CustomField>