force-app/main/default/objects/Recruitment_Call__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>Picklist field that allows users to select the type of phone call made.</description>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admit (College FA Package)</fullName>
            </value>
            <value>
                <fullName>Admit (College New Admit)</fullName>
            </value>
            <value>
                <fullName>Admit (College New Deposit)</fullName>
            </value>
            <value>
                <fullName>Admit (Conditional Admit)</fullName>
            </value>
            <value>
                <fullName>Admit (Department)</fullName>
            </value>
            <value>
                <fullName>Admit (Department Push to Enroll)</fullName>
            </value>
            <value>
                <fullName>Admit (EC FA Package)</fullName>
            </value>
            <value>
                <fullName>Admit (EC New Admit)</fullName>
            </value>
            <value>
                <fullName>Admit (EC New Deposit)</fullName>
            </value>
            <value>
                <fullName>Admit (Enrollment Deposit Push)</fullName>
            </value>
            <value>
                <fullName>Admit (Enrollment Deposit Push 2)</fullName>
            </value>
            <value>
                <fullName>Admit (FAFSA Follow-up)</fullName>
            </value>
            <value>
                <fullName>Admit (FA Package)</fullName>
            </value>
            <value>
                <fullName>Admit (Housing Push)</fullName>
            </value>
            <value>
                <fullName>Admit (Housing Push 2)</fullName>
            </value>
            <value>
                <fullName>Admit (New)</fullName>
            </value>
            <value>
                <fullName>Admit (New) 14 Day Follow-up</fullName>
            </value>
            <value>
                <fullName>Admit (New) 20 Day Follow-up</fullName>
            </value>
            <value>
                <fullName>Admit (New) 7 Day Follow-up</fullName>
            </value>
            <value>
                <fullName>Admit (No FAFSA)</fullName>
            </value>
            <value>
                <fullName>Admit (Orientation Push)</fullName>
            </value>
            <value>
                <fullName>Admit (Orientation Push 2)</fullName>
            </value>
            <value>
                <fullName>Admit (PAR New Admit)</fullName>
            </value>
            <value>
                <fullName>Admit (PAR New Deposit)</fullName>
            </value>
            <value>
                <fullName>Admit (Push to Enroll)</fullName>
            </value>
            <value>
                <fullName>Admit (Push to Enroll) Final Attempt</fullName>
            </value>
            <value>
                <fullName>Admit (Re-Engage)</fullName>
            </value>
            <value>
                <fullName>Admit (Veteran)</fullName>
            </value>
            <value>
                <fullName>Admit Hub - Sunny Follow Up (Admissions)</fullName>
            </value>
            <value>
                <fullName>Admit Hub - Sunny Follow Up (College)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>