force-app/main/default/objects/Recruitment_Call__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to be able to select the appropriate associated campaign for the recruitment call.</description>
    <label>Campaign</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Campaign.RecordType.Name</field>
            <operation>equals</operation>
            <value>Calling</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recruitment Calls</relationshipLabel>
    <relationshipName>Recruitment_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>