force-app/main/default/objects/Recruitment_Call__c/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>Formula field that displays the role of the user who created the recruitment call record.</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Created By Role</label>
    <type>Text</type>
</CustomField>