force-app/main/default/objects/Recruitment_Call__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Master-detail relationship to the opportunity object.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Recruitment Calls</relationshipLabel>
    <relationshipName>Recruitment_Calls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>