force-app/main/default/objects/Recruitment_Call__c/recordTypes/Recruitment_Call.recordType-meta.xml
<RecordType>
    <fullName>Recruitment_Call</fullName>
    <active>true</active>
    <description>Record type used to manage recruitment calls.</description>
    <label>Recruitment Call</label>
</RecordType>