force-app/main/default/objects/Recruitment_Call__c/validationRules/Call_Comment_Required_when_Not_Attempted.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_Comment_Required_when_Not_Attempted</fullName>
    <active>true</active>
    <description>Validation rule that makes the Call Comment field required if the Call Result = "Not Attempted"</description>
    <errorConditionFormula>ISPICKVAL(Call_Result__c, "Not Attempted")&amp;&amp;
(LEN( Call_Comments__c ) &lt; 1)</errorConditionFormula>
    <errorDisplayField>Call_Comments__c</errorDisplayField>
    <errorMessage>Please enter a reason why the call was not attempted.</errorMessage>
</ValidationRule>