force-app/main/default/objects/Recruitment_Call__c/listViews/All_Event_Staff.listView-meta.xml
<ListView>
    <fullName>All_Event_Staff</fullName>
    <columns>NAME</columns>
    <columns>Call_Origin__c</columns>
    <columns>Call_Result__c</columns>
    <columns>Call_Success__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Campaign__c</columns>
    <columns>Call_Comments__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Created_By_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_By_Role__c</field>
        <operation>equals</operation>
        <value>EV Event Staff</value>
    </filters>
    <label>All - Event Staff</label>
</ListView>